# cloudflare-rule-linter

./: Cargo.toml  README.md  linting-rules.md
cfrl/: Cargo.toml
cfrl/src/: main.rs
cfrl/test/: exampleA.tfvars  exampleB.tfvars  example_readme.tfvars
cloudflare_rules/: Cargo.toml  pyproject.toml
cloudflare_rules/cloudflare-rules-py/: main.py  pyproject.toml
cloudflare_rules/cloudflare_rules/: __init__.py
cloudflare_rules/src/: ast_printer.rs  config.rs  lib.rs  linter.rs  scheme.rs
cloudflare_rules/src/linter/: deprecated_field.rs  duplicate_list_entries.rs  illogical_condition.rs  negated_comparison.rs  regex_raw_strings.rs  reserved_ip_space.rs  timestamp_bounds.rs  value_domain.rs
