[package]
description = "Simple wirefilter linter for tfvar files"
edition = "2024"
name = "cfrl"
publish = false
version = "0.1.0"

[dependencies]
annotate-snippets = "0.12.10"
anyhow = "1.0.100"
clap = {version = "4.5.53", features = ["color", "derive"]}
cloudflare-rules = {path = "../cloudflare_rules"}
env_logger = "0.11.8"
hcl-edit = "0.9.3"
log = "0.4.29"
toml = "0.9.10"

[lints]
workspace = true
